--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ title: "Status"
 dataSource: {
 transport: {
 read: {
-url: "https://whippet-evolved-starfish.ngrok-free.app/easygate/rest/easygate/eggetlist?Type=1&FilialeID=1",
+url: "http://67.172.236.204:11122/easygate/rest/easygate/eggetlist?Type=1&FilialeID=1",
 dataType: "json"
 }
 },
@@ -104,7 +104,7 @@ title: "Status"
 dataSource: {
 transport: {
 read: {
-url: "https://67.172.236.204:11122/easygate/rest/easygate/eggetlist?Type=2&FilialeID=1",
+url: "http://67.172.236.204:11122/easygate/rest/easygate/eggetlist?Type=2&FilialeID=1",
 dataType: "json"
 }
 },
