--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ dataSource: {
 transport: {
 read: {
 url: "http://67.172.236.204:11122/easygate/rest/easygate/eggetlist?Type=1&FilialeID=1",
-dataType: "json"
+dataType: "jsonp"
 }
 },
 schema: {
@@ -105,7 +105,7 @@ dataSource: {
 transport: {
 read: {
 url: "http://67.172.236.204:11122/easygate/rest/easygate/eggetlist?Type=2&FilialeID=1",
-dataType: "json"
+dataType: "jsonp"
 }
 },
 schema: {
