--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@ dataSource: {
 transport: {
 read: {
 url: "https://whippet-evolved-starfish.ngrok-free.app/easygate/rest/easygate/eggetlist?Type=1&FilialeID=1",
-dataType: "jsonp"
+dataType: "jsonp",
+beforeSend: function(req) {
+                req.setRequestHeader("ngrok-skip-browser-warning": "69420");
 }
 },
 schema: {
@@ -105,7 +107,9 @@ dataSource: {
 transport: {
 read: {
 url: "https://whippet-evolved-starfish.ngrok-free.app/easygate/rest/easygate/eggetlist?Type=2&FilialeID=1",
-dataType: "jsonp"
+dataType: "jsonp",
+beforeSend: function(req) {
+                req.setRequestHeader("ngrok-skip-browser-warning": "69420");
 }
 },
 schema: {
