--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ read: {
 url: "https://whippet-evolved-starfish.ngrok-free.app/easygate/rest/easygate/eggetlist?Type=1&FilialeID=1",
 dataType: "jsonp",
 beforeSend: function(req) {
-                req.setRequestHeader({"ngrok-skip-browser-warning": "69420"});}
+                req.setRequestHeader('ngrok-skip-browser-warning': '69420')}
 }
 },
 schema: {
@@ -109,7 +109,7 @@ read: {
 url: "https://whippet-evolved-starfish.ngrok-free.app/easygate/rest/easygate/eggetlist?Type=2&FilialeID=1",
 dataType: "jsonp",
 beforeSend: function(req) {
-                req.setRequestHeader({"ngrok-skip-browser-warning": "69420")};}
+                req.setRequestHeader('ngrok-skip-browser-warning': '69420')}
 }
 },
 schema: {
